# agimo

./: CNAME  Cargo.toml  README.md  index.yaml
.github/workflows/: build.yml  chart.yml
ci/docker/: core.dockerfile
ci/helm/: values.yaml
ci/helm/agimo/: Chart.yaml  values.yaml
ci/helm/agimo/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
ci/helm/templates/: _helpers.tpl  configmap.yaml
config/: Cargo.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: interceptor.rs  lib.rs  queryer.rs
src/: interceptor.rs  lib.rs  main.rs  queryer.rs  service.rs
src/args/: mod.rs
src/config/: mod.rs
