[package]
name = "agimo"
authors = ["xiao <zxinmyth@gmail.com>"]
version = "0.1.0"
edition = "2021"
type = ["bin"]

[workspace]
members = ["config", "core"]

[dependencies]
agimo_core = { version = "0.1.0", path = "core" }
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "env"] }
config = { version = "0.1.0", path = "config" }
pingora = { version = "0.2.0", features = ["proxy"] }
toml = "0.8.14"

[features]
default = ["prometheus"]
prometheus = ["agimo_core/prometheus"]
